# oracle-datum-lib

./: cabal.project  oracle-feed.cabal
src/OracleFeed/: ExtendedData.hs  PriceData.hs  Types.hs
test/Test/: Utils.hs
test/Test/OracleFeed/: ExtendedData.hs  SharedData.hs
